--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@700&display=swap"
         rel="stylesheet">
-    <title>KANKERWAL</title>
+    <title>KANKERWAL PROJECTS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <style>
         .slideleft {
             animation: slideleft 0.7s linear forwards;
+            font-size: 180px;
         }
 
         @keyframes slideleft {
@@ -43,7 +44,7 @@
             width: 35%;
             border: 1px solid white;
             border-radius: 20px;
-            height: 50vh;
+            min-height: 50vh;
             padding: 30px;
             margin: 20px;
             background: rgba(199, 189, 189, 0.1);
@@ -51,7 +52,7 @@
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
             transition: 0.5s;
             color: white;
-            z-index: 100;
+            /* z-index: 0; */
 
         }
 
@@ -63,38 +64,123 @@
 
 
         .card h1 {
-            font-size: 40px;
+            font-size: 50px;
             font-weight: bold;
+            font-family: 'Big Shoulders Stencil Display', cursive;
+            ;
 
+        }
+
+        .card p {
+            font-weight: bold;
+            font-family: 'Raleway', sans-serif;
+        }
+
+        .project_links {
+            display: inline-block;
+            border: 2px solid white;
+            border-radius: 10px;
+            /* transform: translate(-50%,-50%); */
+            padding: 10px;
+            position: relative;
+            margin: 10px;
+            text-decoration: none;
+            color: White;
+            font-weight: bold;
+            font-family: 'Big Shoulders Stencil Display', cursive;
+            ;
+            font-size: 30px;
+            transition: .5s;
+        }
+
+        .project_links:hover {
+            color: #4c8808
+        }
+
+        .name {
+            padding-top: 50px;
+            padding-left: 50px;
+            margin-top: 50px;
+            margin-left: 50px;
+        }
+
+        @media(max-width:850px) {
+            .slideleft {
+                font-size: 120px;
+            }
+
+            .name {
+                padding-top: 30px;
+                padding-left: 30px;
+                margin-top: 30px;
+                margin-left: 30px;
+            }
+
+            .projects {
+                flex-direction: column;
+                padding-top: 100px
+            }
+
+            .card {
+                width: auto;
+
+            }
+        }
+
+        @media(max-width:575px) {
+            .slideleft {
+                font-size: 80px;
+            }
+
+            .name {
+                padding-top: 50px;
+                padding-left: 5px;
+                margin-top: 70px;
+                margin-left: 5px;
+            }
+        }
+
+        .projects {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        @media(max-width:1070px) {
+            .card {
+                height: 75vh;
+            }
         }
     </style>
 </head>
 
 <body class="overflow-x-hidden" style="color:#f5eee6; background-color: #131313; box-sizing: border-box;">
-    <nav class="navbar .bg-transparent z-1 sticky-top" style="backdrop-filter: blur(8px);">
+    <nav class="navbar .bg-transparent z-1 sticky-top" style="backdrop-filter: blur(8px);z-index: 1;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"
-                style="color:white;font-family:'Raleway', sans-serif;text-decoration:none;font-size: 1.5rem;;">KANKERWAL</a>
+                style="color:white;font-family:'Raleway', sans-serif;text-decoration:none;;">KANKERWAL</a>
         </div>
     </nav>
     <div class="d-flex vh-100 justify-content-between ">
-        <div class="text-break position-relative p-5 m-5 "
-            style="font-family: 'Big Shoulders Stencil Display', cursive;;">
-            <h1 class="slideleft" style="font-size: 180px;animation-delay: 1s;opacity: 0;">The </h1>
-            <h1 class="slideleft" style="font-size: 180px; animation-delay:1.7s;opacity:0;">Kankerwal </h1>
+        <div class="text-break position-relative name " style="font-family: 'Big Shoulders Stencil Display', cursive;;">
+            <h1 class="slideleft" style="animation-delay: 1s;opacity: 0;">The </h1>
+            <h1 class="slideleft" style=" animation-delay:1.7s;opacity:0;">Kankerwal </h1>
         </div>
     </div>
-    <div class="projects d-flex align-items-center justify-content-center min-vh-100">
-    
+    <div class=" /*d-flex align-items-center justify-content-center*/ min-vh-100 projects">
+
         <div class="card text-center" data-tilt data-tilt-scale="1.1">
-            <h1>Data science</h1>
-            <p style="margin-top:20px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit, eius?</p>
+            <h1>Stock View</h1>
+            <p style="margin-top:20px;">A data science project where you can check the stock charts of
+                companies and compare them all in one chart.</p>
+            <a class="project_links" href="">VIEW</a>
 
         </div>
         <div class="card text-center" data-tilt data-tilt-scale="1.1">
             <h1>Library Dashboard</h1>
-            <p style="margin-top:20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Officia at eos animi quam nesciunt tempore.</p>
+            <p style="margin-top:20px;">A GUI Software were you can manange your Library. Note: This software will
+                only run on computer</p>
+            <a href="LibraryDashboard_mysetup.exe" class="project_links">Download</a>
         </div>
     </div>
     <script src="vanilla-tilt.js"></script>
