--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>KANKERWAL PROJECTS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/99669fc608.js" crossorigin="anonymous"></script>
     <style>
         .slideleft {
             animation: slideleft 0.7s linear forwards;
@@ -151,6 +152,22 @@
                 height: 75vh;
             }
         }
+
+        .footer {
+            text-align: center;
+            background: black;
+            font-family: 'Raleway', sans-serif;
+            ;
+        }
+
+        .footer strong {
+            font-family: 'Big Shoulders Stencil Display', cursive;
+        }
+
+        .social {
+            padding: 10px;
+            font-size: 20px
+        }
     </style>
 </head>
 
@@ -182,6 +199,11 @@
                 only run on computer</p>
             <a href="LibraryDashboard_mysetup.exe" class="project_links">Download</a>
         </div>
+    </div>
+    <div class="footer">
+        Developed By: <strong>VK KANKERWAL <br></strong>
+        <a href=""><i class="social fa-brands fa-github"></i></a>
+        <a href=""><i class="social fa-brands fa-linkedin-in"></i></a>
     </div>
     <script src="vanilla-tilt.js"></script>
 </body>
