--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
             padding: 10px;
             font-size: 20px
         }
+
+        @media(max-width:299px) {
+            .slideleft {
+                font-size: 65px;
+            }
+        }
     </style>
 </head>
 
@@ -184,13 +190,13 @@
             <h1 class="slideleft" style=" animation-delay:1.7s;opacity:0;">Kankerwal </h1>
         </div>
     </div>
-    <div class=" /*d-flex align-items-center justify-content-center*/ min-vh-100 projects">
+    <div class=" min-vh-100 projects">
 
         <div class="card text-center" data-tilt data-tilt-scale="1.1">
             <h1>Stock View</h1>
             <p style="margin-top:20px;">A data science project where you can check the stock charts of
                 companies and compare them all in one chart.</p>
-            <a class="project_links" href="">VIEW</a>
+            <a class="project_links" href="https://stockview.streamlit.app/">VIEW</a>
 
         </div>
         <div class="card text-center" data-tilt data-tilt-scale="1.1">
@@ -202,8 +208,9 @@
     </div>
     <div class="footer">
         Developed By: <strong>VK KANKERWAL <br></strong>
-        <a href=""><i class="social fa-brands fa-github"></i></a>
-        <a href=""><i class="social fa-brands fa-linkedin-in"></i></a>
+        <a href="https://github.com/vineetkankerwal8426"><i class="social fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/vineet-kankeral-11145b260"><i
+                class="social fa-brands fa-linkedin-in"></i></a>
     </div>
     <script src="vanilla-tilt.js"></script>
 </body>
