--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
             }
 
             .card {
-                width: auto;
+                width: 78%;
+                margin-bottom:50px:
 
             }
         }
