--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
             .card {
                 width: 78%;
-                margin-bottom:50px:
+                margin-bottom:50px;
 
             }
         }
