--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
             .card {
                 width: 78%;
-                margin-bottom:70px;
+                margin-bottom:77px;
 
             }
         }
@@ -151,7 +151,7 @@
 
         @media(max-width:1070px) {
             .card {
-                height: 75vh;
+                height: 60vh;
             }
         }
 
@@ -174,6 +174,25 @@
         @media(max-width:299px) {
             .slideleft {
                 font-size: 65px;
+            }
+        }
+        @media(max-width:306px){
+            .card h1{
+                font-size: 40px;
+            }
+            .project_links{
+                font-size:25px;
+            }
+        }
+        @media(max-width:260px){
+            .card h1{
+                font-size:34px;
+            }
+            .project_links{
+                font-size:20px;
+            }
+            .slideleft{
+                font-size:58px;
             }
         }
     </style>
