--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
             .card {
                 width: 78%;
-                margin-bottom:77px;
+                margin-bottom:78px;
 
             }
         }
@@ -151,7 +151,7 @@
 
         @media(max-width:1070px) {
             .card {
-                height: 61vh;
+                height: 62vh;
             }
         }
 
@@ -193,6 +193,11 @@
             }
             .slideleft{
                 font-size:58px;
+            }
+        }
+        @media(max-height:610px){
+            .card{
+                height:70vh;
             }
         }
     </style>
