--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       
         <div class="card text-center" data-tilt data-tilt-scale="1.1">
             <h1>Library Dashboard</h1>
-            <p style="margin-top:20px;">A GUI Software were you can manange your Library. Note: This software will
+            <p style="margin-top:20px;">A GUI Software where you can manage your Library. Note: This software will
                 only run on computer</p>
             <a href="LibraryDashboard_mysetup.exe" class="project_links">Download</a>
         </div>   
